--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
+
+
 .cont {
     display: flex;
     justify-content: center;
-    
+    margin-top: 110px;
 }
 
 .calcBox {
@@ -17,21 +19,28 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color:black;
 }
 
 #display {
     
-    width: 320px;
+    width: 360px;
     height: 110px;
-    background-color: grey;
+    background-color: rgb(69, 105, 102);
+    font-family: 'Digital-7 Mono', sans-serif;
     margin: 20px 0 20px 0;
-    border-radius: 6%;
+    border-radius: 2%; 
     font-size: larger;
     color: black;
+    font-size: 50px;
+    line-height: 100px;
+    word-break:break-all;
+    white-space:normal;
 }
 .keypad {
     display: inline-block;
     font-size: 0px;
+    
     
     
 
@@ -43,12 +52,14 @@ button {
     padding: 0px;
     height: 100px;
     width: 100px;
-  
-    
+    background-color: grey;
+    font-size: 30px;
+    font-family: system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji'; 
+    color:aliceblue;
 
 }
 
-.equals {
+#equals {
     width: 200px;
     
 }
